Remove usage of getLast()